package entitee;
import equipement.arme.Arme;

public class Monstre extends Entitee{

}
