package entitee.personnage;
import entitee.Entitee;

public class Personnage extends Entitee{
}
