package entitee.personnage.classe;

public abstract class Classe {
}
