package entitee.personnage.classe;

public class Clerc extends Classe{
}
