package entitee.personnage.classe;

public class Guerrier extends Classe{
}
