package entitee.personnage.classe;

public class Magicien extends Classe{
}
