package entitee.personnage.classe;

public class Roublard extends Classe{
}
