package entitee.personnage.race;

public class Elfe extends Race{
}
