package entitee.personnage.race;

public class Halfelin extends Race{
}
