package entitee.personnage.race;

public class Humain extends Race{
}
