package entitee.personnage.race;

public class Nain extends Race{
}
