package entitee.personnage.race;

public abstract class Race {
}
