package equipement;

public abstract class Equipement {
}
