package equipement.arme;
import equipement.Equipement;

public class Arme extends Equipement {
}
