package equipement.armure;
import equipement.Equipement;

public class Armure extends Equipement {
}
